Use Java 17 language features
Special thanks to OpenRewrite