@@ -39,7 +39,6 @@ import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -125,8 +124,8 @@ public class GitClientTest {
                 .getClient();
 
         CliGitAPIImpl cliGitClient;
-        if (this.srcGitClient instanceof CliGitAPIImpl) {
-            cliGitClient = (CliGitAPIImpl) this.srcGitClient;
+        if (this.srcGitClient instanceof CliGitAPIImpl impl) {
+            cliGitClient = impl;
         } else {
             cliGitClient = (CliGitAPIImpl) Git.with(TaskListener.NULL, new EnvVars())
                     .in(srcRepoDir)
@@ -314,8 +313,7 @@ public class GitClientTest {
      * not a threat to these tests.
      */
     private void allowFileProtocol(GitClient client) throws Exception {
-        if (client instanceof CliGitAPIImpl) {
-            CliGitAPIImpl cliGit = (CliGitAPIImpl) client;
+        if (client instanceof CliGitAPIImpl cliGit) {
             cliGit.allowFileProtocol();
         }
     }
@@ -327,7 +325,7 @@ public class GitClientTest {
     }
 
     private ObjectId commitOneFile(final String commitMessage) throws Exception {
-        final String content = String.format("A random UUID: %s\n", UUID.randomUUID());
+        final String content = "A random UUID: %s\n".formatted(UUID.randomUUID());
         return commitFile("One-File.txt", content, commitMessage);
     }
 
@@ -390,18 +388,21 @@ public class GitClientTest {
     public void testChangelogVeryLong() throws Exception {
 
         final String gitMessage =
-                "Uno Dos Tres Cuatro Cinco Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut "
-                        + "posuere tellus eu efficitur tristique. In iaculis neque in dolor vulputate"
-                        + "sollicitudin eget a quam. Donec finibus sapien quis lectus euismod facilisis. Integer"
-                        + "massa purus, scelerisque id iaculis ut, blandit vitae velit. Pellentesque lobortis"
-                        + "aliquet felis, vel laoreet ipsum tincidunt at. Mauris tellus est, cursus vitae ex"
-                        + "eget, venenatis auctor eros. Sed sagittis porta odio. Donec ut interdum massa. Aliquam"
-                        + "sagittis, mi sit amet sollicitudin elementum, velit quam eleifend nisl, in rhoncus"
-                        + "felis nibh eu nibh. Class aptent taciti sociosqu ad litora torquent per conubia "
-                        + "nostra, per inceptos himenaeos."
-                        + "\nseis\n"
-                        + "\nasfasfasfasf\n";
-        final String content = String.format("A random UUID: %s\n", UUID.randomUUID());
+                """
+                Uno Dos Tres Cuatro Cinco Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut \
+                posuere tellus eu efficitur tristique. In iaculis neque in dolor vulputate\
+                sollicitudin eget a quam. Donec finibus sapien quis lectus euismod facilisis. Integer\
+                massa purus, scelerisque id iaculis ut, blandit vitae velit. Pellentesque lobortis\
+                aliquet felis, vel laoreet ipsum tincidunt at. Mauris tellus est, cursus vitae ex\
+                eget, venenatis auctor eros. Sed sagittis porta odio. Donec ut interdum massa. Aliquam\
+                sagittis, mi sit amet sollicitudin elementum, velit quam eleifend nisl, in rhoncus\
+                felis nibh eu nibh. Class aptent taciti sociosqu ad litora torquent per conubia \
+                nostra, per inceptos himenaeos.
+                seis
+
+                asfasfasfasf
+                """;
+        final String content = "A random UUID: %s\n".formatted(UUID.randomUUID());
         ObjectId message = commitFile("One-File.txt", content, gitMessage);
 
         ChangelogCommand changelog = gitClient.changelog();
@@ -1778,9 +1779,12 @@ public class GitClientTest {
         File uuidFile = new File(repoRoot, "uuid.txt");
         String fileContent =
                 Files.readString(uuidFile.toPath(), StandardCharsets.UTF_8).trim();
-        String expectedContent = "version https://git-lfs.github.com/spec/v1\n"
-                + "oid sha256:75d122e4160dc91480257ff72403e77ef276e24d7416ed2be56d4e726482d86e\n"
-                + "size 33";
+        String expectedContent =
+                """
+                version https://git-lfs.github.com/spec/v1
+                oid sha256:75d122e4160dc91480257ff72403e77ef276e24d7416ed2be56d4e726482d86e
+                size 33\
+                """;
         assertEquals("Incorrect non-LFS file contents in " + uuidFile, expectedContent, fileContent);
     }
 
@@ -2454,12 +2458,12 @@ public class GitClientTest {
      */
     private void enableLongPaths(GitClient gitClient) throws InterruptedException {
         CliGitAPIImpl cliGitClient;
-        if (gitClient instanceof CliGitAPIImpl && isWindows()) {
+        if (gitClient instanceof CliGitAPIImpl impl && isWindows()) {
             /* Enable core.longpaths prior to fetch on Windows -
              * testSubmodulesUsedFromOtherBranches submodule test will
              * fail with default Windows location otherwise
              */
-            cliGitClient = (CliGitAPIImpl) gitClient;
+            cliGitClient = impl;
             cliGitClient.launchCommand("config", "core.longpaths", "true");
         }
     }
@@ -2564,7 +2568,7 @@ public class GitClientTest {
         gitCmd.initializeRepository("Vojtěch GitClientTest Zweibrücken-Šafařík", "email.from.git.client@example.com");
         File readme = new File(urlRepoDir, "readme");
         String readmeText = "This repo includes .url in its directory name (" + random.nextInt() + ")";
-        Files.write(Paths.get(readme.getAbsolutePath()), readmeText.getBytes());
+        Files.write(Path.of(readme.getAbsolutePath()), readmeText.getBytes());
         urlRepoClient.add("readme");
         urlRepoClient.commit("Added README to repo used as a submodule");
         /* Enable long paths to prevent checkout failure on default Windows workspace with MSI installer */
@@ -2587,7 +2591,7 @@ public class GitClientTest {
         File hasSubmoduleReadme = new File(repoHasSubmodule, "readme");
         String hasSubmoduleReadmeText =
                 "Repo has a submodule that includes .url in its directory name (" + random.nextInt() + ")";
-        Files.write(Paths.get(hasSubmoduleReadme.getAbsolutePath()), hasSubmoduleReadmeText.getBytes());
+        Files.write(Path.of(hasSubmoduleReadme.getAbsolutePath()), hasSubmoduleReadmeText.getBytes());
         repoHasSubmoduleClient.add("readme");
         repoHasSubmoduleClient.commit("Added README to repo that will include a submodule whose URL ends in '.url'");
         String moduleDirBaseName = "module.named.url";
@@ -3327,9 +3331,13 @@ public class GitClientTest {
             return;
         }
         String gitBranchOutput =
-                "* (HEAD detached at b297853)  b297853e667d5989801937beea30fcec7d1d2595 Commit message with line breaks\r very-long-string-with-more-than-44-characters\n"
-                        + "  remotes/origin/master       e0d3f46c4fdb8acd068b6b127356931411d16e23 Commit message with line breaks\r very-long-string-with-more-than-44-characters and some more text\n"
-                        + "  remotes/origin/develop      fc8996efc1066d9dae529e5187800f84995ca56f Single-line commit message\n";
+                """
+                * (HEAD detached at b297853)  b297853e667d5989801937beea30fcec7d1d2595 Commit message with line breaks
+ very-long-string-with-more-than-44-characters
+                  remotes/origin/master       e0d3f46c4fdb8acd068b6b127356931411d16e23 Commit message with line breaks
+ very-long-string-with-more-than-44-characters and some more text
+                  remotes/origin/develop      fc8996efc1066d9dae529e5187800f84995ca56f Single-line commit message
+                """;
 
         cliGitAPIImplTest.setTimeoutVisibleInCurrentTest(false);
         CliGitAPIImpl git = new CliGitAPIImpl("git", new File("."), cliGitAPIImplTest.listener, cliGitAPIImplTest.env);
